Tests/Resources/Ok/const_memory_to_top.st
language core;
extend with #references, #top-type, #structural-subtyping;

fn main(n : Nat) -> Top {
	return <0x01>
}
